[package]
name = "toybox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
# color-eyre = "0.6.2"
color-eyre = { version = "0.6.2", default-features = false }
eyre = "0.6.8"
owo-colors = { version = "3.5.0", features = [
    "supports-colors",
    "supports-color",
] }
toml = "0.5.9"
# tracing = "0.1.37"
